Bug 155077 - CRASH exporting a dialog with language resources
Summary: CRASH exporting a dialog with language resources
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2023-04-29 10:59 UTC by Mike Kaganski
Modified: 2023-05-03 08:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-04-29 10:59:36 UTC
1. Tools->Macros->Edit Macros
2. Dialog->Organize Dialogs
3. New->accept any new dialog name->Close
4. Double-click the newly created dialog in the Object Catalog
5. Dialog->Manage Language
6. Add->add any language->Close
7. File->Export Dialog->accept any file name

==> CRASH

The same procedure, but skipping #5-#6, will succeed.

Tested with:
Version: 7.5.3.1 (X86_64) / LibreOffice Community
Build ID: d29ee673721b12c92b3de9b9663473211414f0db
CPU threads: 12; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL threaded
Comment 1 Mike Kaganski 2023-04-29 11:06:52 UTC
Regression after 9a55b97e980bbf2a0ce12841f6168f1f7545ac96
Comment 2 Mike Kaganski 2023-04-29 11:27:32 UTC
https://gerrit.libreoffice.org/c/core/+/151181
Comment 3 Commit Notification 2023-04-29 12:24:34 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5f303eaaeac23813e9809c87bce406ea5c52ee14

tdf#155077: use the selected URL when writing languages

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-05-03 08:04:48 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/86651deb4655d99f1f8a943475cfb2c354580025

tdf#155077: use the selected URL when writing languages

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.