tdf#155077: use the selected URL when writing languages

Regression after commit 9a55b97e980bbf2a0ce12841f6168f1f7545ac96
(tdf#40068 Remember last directory for basic/dialog import/export,
2021-07-14).

Change-Id: I6ddb88cbe8a08128c451169de7e9ed4597dc4356
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151181
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 5f303eaaeac23813e9809c87bce406ea5c52ee14)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151271
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>